--- a/PianoDiProgetto/sections/wbs.tex
+++ b/PianoDiProgetto/sections/wbs.tex
@@ -8,7 +8,7 @@ La WBS, inoltre, risulta essere la base per tutte le altre attività di pianific
 \subsubsection{WBS-Primo Livello}
 \paragraph{Definizione Concept}
 È la prima fase del progetto, dove si raccolgono le idee per portare alla nascita e alla definizione del progetto.\\
-A partire da questo momento in poi si penserà alla forma che assumerà il prodotto finale, alla  definizione delle caratteristiche più importanti( target del prodotto, come si intende erogare il servizio) e alla definizione delle funzionalità principali che il prodotto finale deve avere.
+A partire da questo momento in poi si penserà alla forma che assumerà il prodotto finale, alla  definizione delle caratteristiche più importanti (target del prodotto, come si intende erogare il servizio) e alla definizione delle funzionalità principali che il prodotto finale deve avere.
 
 \paragraph{Studio Fattibilità}
 È la fase successiva a quella di Definizione Concept, ha lo scopo di capire se quello che si vuole realizzare è innanzitutto fattibile e possa portare ad avere dei guadagni concreti.\\
@@ -30,7 +30,8 @@ Arrivati a questo punto vengono dunque effettuati i test delle componenti prodot
 Inoltre viene verificato che quanto è stato prodotto sia conforme agli obiettivi e ai requisiti che si erano definiti in precedenza.
 
 \paragraph{Pubblicazione}
-Una volta che il software prodotto è terminato e rispetta gli obiettivi ed i requisiti, viene ideato un piano per il rilascio.\\ Viene definito come la società intende promuovere il proprio prodotto e la ricerca di eventuali partnership.
+Una volta che il software prodotto è terminato e rispetta gli obiettivi ed i requisiti, viene avviato il piano per il rilascio.\\
+Viene definito come la società intende promuovere il proprio prodotto e la ricerca di eventuali partnership.
 
 \subsubsection {WBS-Secondo livello}
 Per la descrizione dei Work Package di secondo livello verrà utilizzato il seguente schema in quanto, fatta eccezione per il WP %TODO manca numero work package
