--- a/PianoDiProgetto/sections/wbs.tex
+++ b/PianoDiProgetto/sections/wbs.tex
@@ -305,6 +305,24 @@ alto livello del software.
 \item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
 
+\paragraph{Realizzazione documentazione database}
+\begin{description}
+\item[Descrizione:] stesura formale della documentazione relativa all'architettura riguardante il database.
+\item[Responsabile:] 
+\item[Input:] specifica tecnica, definizione di prodotto.
+\item[Output:] documento con scopo documentale della codifica del software.
+\item[Attività:]
+\begin{itemize}
+\item studio documenti in input;
+\item stesura documentazione per ogni singola unità;
+\item verifica documento ed eventuali correzioni;
+\item formalizzazione documento;
+\item approvazione;
+\end{itemize}
+\item[Costo:] \euro{}.
+\item[Tempi di realizzazione:]  giorni lavorativi.
+\end{description}
+
 \paragraph{Definizione e realizzazione del database}
 \begin{description}
 \item[Descrizione:] fase di sviluppo e codifica del database secondo quanto definito nella fase di progettazione.
@@ -356,24 +374,6 @@ alto livello del software.
 \item approvazione;
 \end{itemize}
 \item[Costo:] \euro{}
-\item[Tempi di realizzazione:]  giorni lavorativi.
-\end{description}
-
-\paragraph{Realizzazione documentazione database}
-\begin{description}
-\item[Descrizione:] stesura formale della documentazione riguardante tutto il codice prodotto per la realizzazione del database.
-\item[Responsabile:] 
-\item[Input:] Specifica Tecnica, Definizione di Prodotto e codice software del database.
-\item[Output:] documento con scopo documentale della codifica del software.
-\item[Attività:]
-\begin{itemize}
-\item studio documenti in input e del codice prodotto;
-\item stesura documentazione per ogni singola unità;
-\item verifica documento ed eventuali correzioni;
-\item formalizzazione documento;
-\item approvazione;
-\end{itemize}
-\item[Costo:] \euro{}.
 \item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
 
