Modifica rischi di progetto

--- a/PianoDiProgetto/sections/rischi.tex
+++ b/PianoDiProgetto/sections/rischi.tex
@@ -1,3 +1,56 @@
+Con il termine rischio si vuole identificare la probabilità che un'azione porti al verificarsi di
+eventi indesiderati. Nel corso della realizzazione di un progetto i rischi sono inevitabili, è dunque opportuno analizzare i potenziali rischi, stimare la probabilità con cui si possono verificare ed individuare eventuali procedure per mitigarli. \\
+\linebreak
+
+\textbf{Identificazione del rischio}\\
+L'identificazione del rischio ha l'obiettivo di portare all'attenzione delle parti
+coinvolte nel progetto un insieme, il più possibile completo e corretto, di elementi di criticità che
+costituiscono la base per la valutazione del rischio generale e per la predisposizione delle
+opportune procedure di mitigazione.\\
+\linebreak
+
+\textbf{Quantificazione del rischio}\\
+La quantificazione dei rischi potenziali dà una base alla valutazione di quella dell'intero
+progetto. Si intende evidenziare come la sua valorizzazione non sia assoluta, ma dipenda da due fattori fondamentali: il
+tempo e le tecniche adottate per attenuarlo. La prima dipendenza è legata al fatto che al
+semplice passare del tempo, gli elementi di rischiosità tendono a cambiare sia in termini
+di probabilità di accadimento, che in termini di danno arrecabile al progetto. Per il
+secondo aspetto, invece, occorre osservare che l'entità del rischio dipende fortemente
+dalle strategie che vengono messe in atto per controllarlo. Possiamo aspettarci
+che la valutazione iniziale sia significativamente superiore a quella successiva proprio in virtù dell'efficacia del piano di azione individuato. 
+
+\begin{longtable}{|>{\centering}p{5cm}| >{\centering}m{5cm}| }
+    \hline
+    \multicolumn{1}{|c|}{\textbf{Livello}} &
+    \multicolumn{1}{c|}{\textbf{Probabilità}} \\ %\tabularnewline 
+      \hline
+        1 & $ \le 5 \% $\tabularnewline
+		2 & $ \ge 5 \%$ e $ \le 20 \% $\tabularnewline
+		3 & $ \ge 20 \%$ e $ \le 40 \% $\tabularnewline
+		4 & $ \ge 40 \%$ e $ \le 60 \% $\tabularnewline
+		5 & $ \ge 60 \%$ \tabularnewline
+      \hline
+    \caption{Metrica valutazione probabilità di rischio}
+    \label{tab: Metrica valutazione probabilità di rischio}
+  \end{longtable}
+  
+
+
+\textbf{Progettazione interventi}\\
+La progettazione ha l'obiettivo di fornire la pianificazione di un insieme coerente e
+sostenibile di attività e di responsabilità per il controllo del rischio e l'individuazione
+delle modalità di misura associate al controllo dei risultati.\\
+\linebreak
+\textbf{Esecuzione degli interventi}\\
+Avendo stabilito la migliore strategia di mitigazione del rischio, si applica l'intervento
+alla lista di processi produttivi interessati.\\
+\linebreak
+\textbf{Verifica intervento}\\
+L'obiettivo di questa attività è di valutare l'efficacia e l'efficienza dimostrata dal piano di
+gestione del rischio al fine di confermarne la validità o di innescare una fase di revisione
+del sistema di gestione del rischio.
+
+
 \subsection{Indisposizione del personale} 
 \begin{description}
 \item[Descrizione:]c'è la possibilità che uno, o più membri del gruppo di lavoro, non possa prendere parte attivamente al progetto per un periodo di tempo variabile causa malattia o impegni personali importanti. Ciò può comportare dei rallentamenti, fino al possibile mancato rispetto dei termini di rilascio previsti.
