aggiunto identificativi attività

--- a/PianoDiProgetto/sections/wbs.tex
+++ b/PianoDiProgetto/sections/wbs.tex
@@ -6,32 +6,36 @@ Grazie alla WBS il project manager può, in maniera semplificata, organizzare tu
 La WBS, inoltre, risulta essere la base per tutte le altre attività di pianificazione richieste per la realizzazione di un progetto di successo.
 
 \subsubsection{WBS-Primo Livello}
-\paragraph{Definizione Concept}
+\paragraph{Definizione Concept (1.1)}
 È la prima fase del progetto, dove si raccolgono le idee per portare alla nascita e alla definizione del progetto.\\
 A partire da questo momento in poi si penserà alla forma che assumerà il prodotto finale, alla  definizione delle caratteristiche più importanti (target del prodotto, come si intende erogare il servizio) e alla definizione delle funzionalità principali che il prodotto finale deve avere.
 
-\paragraph{Studio Fattibilità}
+\paragraph{Studio Fattibilità (1.2)}
 È la fase successiva a quella di Definizione Concept, ha lo scopo di capire se quello che si vuole realizzare è innanzitutto fattibile e possa portare ad avere dei guadagni concreti.\\
 Dunque il concept viene valutato sotto tutti i punti di vista e di interesse per l'organizzazione, al fine di avere un insieme di conclusioni e indicazioni sulle possibilità di buona riuscita del lavoro.
 
-\paragraph{Analisi e Progettazione}
+\paragraph{Pianificazione (1.3)}
+In questa fase si vogliono studiare i processi che il team vuole adottare, quindi una pianificazione delle attività inerenti il ciclo di vita del prodotto avvalendosi di strumenti come diagrammi di Gantt, WBS, OBS e altri strumenti consultabili alla sezione Pianificazione. In questa fase si vogliono definire anche gli obiettivi e le strategie al fine di stabilire a priori ciò che il team dovrà controllare e soprattutto misurare.
+
+\paragraph{Analisi e Progettazione (1.4)}
 A questo punto gli obiettivi del progetto sono chiari, bisogna dunque formalizzarli e chiarirli in maniera non ambigua.\\
 Vengono illustrate dettagliatamente le funzionalità, i servizi e le prestazioni che dovranno essere offerte dal prodotto finito.\\
 Infine viene progettato come il prodotto soddisferà i requisiti definiti in precedenza, definendone la struttura ed architettura da assumere e rispettare.
 
-\paragraph{Sviluppo}
+\paragraph{Sviluppo (1.5)}
 In questa fase si passa alla creazione vera e propria del prodotto software mediante la codifica di quanto definito durante la progettazione.\\
 Affinché questo risulti possibile è essenziale che ogni membro si attenga strettamente a quanto descritto nei documenti che gli vengono forniti.\\
 Non deve, assolutamente, inserire della creatività personale, in quanto il suo compito consiste nella traduzione in codice di quanto deciso precedentemente.\\
 Il codice prodotto dovrà essere costantemente verificato, per avere la sicurezza e la certezza che rispetti i requisiti di qualità definiti nella fase di pianificazione, accompagnato dall'appropriata manualistica.
 
-\paragraph{Test}
+\paragraph{Test (1.6)}
 Arrivati a questo punto vengono dunque effettuati i test delle componenti prodotte, verificando come si relazionano tra di loro, a partire dalle componenti di base del prodotto per arrivare a testare, alla fine, il sistema completo.\\
 Inoltre viene verificato che quanto è stato prodotto sia conforme agli obiettivi e ai requisiti che si erano definiti in precedenza.
 
-\paragraph{Pubblicazione}
+\paragraph{Pubblicazione (1.7)}
 Una volta che il software prodotto è terminato e rispetta gli obiettivi ed i requisiti, viene avviato il piano per il rilascio.\\
-Viene definito come la società intende promuovere il proprio prodotto e la ricerca di eventuali partnership.
+In questa fase è prevista la realizzazione di documentazione a supporto dell'utente finale ed eventuali attività di manutenzione o comunque di supporto all'utente finale.\\
+Deve essere anche definito come la società intende promuovere il proprio prodotto e la ricerca di eventuali partnership.
 
 \subsubsection {WBS-Secondo livello}
 Per la descrizione dei Work Package di secondo livello verrà utilizzato il seguente schema in quanto, fatta eccezione per il WP %TODO manca numero work package
@@ -46,7 +50,7 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Tempi di realizzazione:] tempo necessario stimato per la buona riuscita e per il completamento del WP, espresso in giorni lavorativi.
 \end{description}
 
-\paragraph{Specifiche di massima}
+\paragraph{Specifiche di massima (1.1.1)}
 \begin{description}
 \item[Descrizione:] Definizione delle prime specifiche del prodotto per individuare i requisiti ad alto livello necessari a sviluppare l'abstract.
 \item[Responsabile:]
@@ -65,7 +69,7 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Tempi di realizzazione:] giorni lavorativi.
 \end{description}
 
-\paragraph{Definizione delle funzionalità d'uso}
+\paragraph{Definizione delle funzionalità d'uso (1.1.2)}
 \begin{description}
 \item[Descrizione:] definizione dettagliata delle più importanti funzionalità che si vuole siano presenti all'interno del software.
 \item[Responsabile:]
@@ -84,7 +88,7 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
 
-\paragraph{Analisi delle nuove tecnologie}
+\paragraph{Analisi delle nuove tecnologie (1.1.3)}
 \begin{description}
 \item[Descrizione:] ricerca mirata di eventuali innovazioni tecnologie presenti nel mercato che possano risultare utili allo sviluppo del software.
 \item[Responsabile:]
@@ -103,7 +107,7 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
 
-\paragraph{Fattibilità tecnica}
+\paragraph{Fattibilità tecnica (1.2.1)}
 \begin{description}
 \item[Descrizione:] fase di valutazione del prodotto che si vuole realizzare dal punto di vista tecnico-tecnologico.
 \item[Responsabile:] 
@@ -124,7 +128,7 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
 
-\paragraph{Fattibilità marketing}
+\paragraph{Fattibilità marketing (1.2.2)}
 \begin{description}
 \item[Descrizione:] fase di analisi del mercato per studiare la concorrenza dovuta ad idee similari. Seguono quindi una stima ed una analisi della redditività del prodotto e alle indicazioni preliminari su come pubblicizzarlo e rilasciarlo al fine di ottenere maggiori introiti dalla vendita.
 \item[Responsabile:] 
@@ -144,7 +148,7 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
 
-\paragraph{Fattibilità Legale}
+\paragraph{Fattibilità legale (1.2.3)}
 \begin{description}
 \item[Descrizione:] fase di analisi del prodotto software sotto l'aspetto legale. Si studiano e si definiscono le strategie eventuali da adottare in difesa del progetto. Si verifica inoltre la possibilità di brevettare il prodotto e di registrare un marchio. Infine si verifica che lo sviluppo non porti alla violazione di alcuna legge o normativa in vigore.
 \item[Responsabile:]
@@ -163,7 +167,7 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
 
-\paragraph{Fattibilità Economica}
+\paragraph{Fattibilità Economica (1.2.4)}
 \begin{description}
 \item[Descrizione:] fase di analisi del prodotto software sotto l'aspetto economico. Si studia e si valutano i benefici economici che tale progetto potrebbe portare. Vengono stimati inoltre i costi che l'organizzazione dovrebbe sostenere, diretti ed indiretti. Inoltre viene studiata la possibilità di ottenere dei finanziamenti esterni 
 \item[Responsabile:] 
@@ -183,7 +187,7 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
 
-\paragraph{Pianificazione qualità del prodotto}
+\paragraph{Pianificazione qualità del prodotto (1.3.1)}
 \begin{description}
 \item[Descrizione:] fase di identificazione e definizione degli standard da seguire allo scopo di garantire qualità al prodotto. Identificazione delle strategie di controllo da utilizzare per aggiungere qualità al prodotto.
 \item[Responsabile:] 
@@ -206,7 +210,7 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \end{description}
 
 
-\paragraph{Analisi dei rischi}
+\paragraph{Analisi dei rischi (1.3.2)}
 \begin{description}
 \item[Descrizione:] fase di analisi dei rischi riguardanti lo sviluppo del prodotto software. Si studia e si definiscono quali sono i rischi in cui si può incombere durante tutte la fasi di sviluppo, così da poterli evitare o quantomeno gestire.
 \item[Responsabile:] 
@@ -226,7 +230,7 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
 
-\paragraph{Definizione dei casi d'uso}
+\paragraph{Definizione dei casi d'uso (1.4.1)}
 \begin{description}
 \item[Descrizione:]fase di definizione finale delle funzionalità del prodotto. Si determina in modo non ambiguo quali saranno le caratteristiche del software e come gli utenti potranno interagire con esso. Successivamente si effettua un'analisi dei rischi sul piano dello sviluppo del software, si studia e si definiscono quali sono i rischi nei quali si può incombere durante tutte la fasi di sviluppo, così da poterli evitare o quantomeno gestire.
 \item[Responsabile:] 
@@ -246,7 +250,7 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
 
-\paragraph{Definizione dei requisiti}
+\paragraph{Definizione dei requisiti (1.4.2)}
 \begin{description}
 \item[Descrizione:] fase non elementare, composta da altri WP di livello inferiore, allo scopo di definire i requisiti che il prodotto deve possedere e soddisfare.
 \item[Responsabile:] 
@@ -265,7 +269,7 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
 
-\paragraph{Progettazione di alto livello}
+\paragraph{Progettazione di alto livello (1.4.3)}
 \begin{description}
 \item[Descrizione:] fase in cui si procede con la definizione dell'architettura del prodotto utilizzando componenti con
 specifica chiara, coesa e nei principi di qualità fissati a priori.
@@ -286,7 +290,7 @@ alto livello del software.
 \item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
 
-\paragraph{Progettazione di dettaglio}
+\paragraph{Progettazione di dettaglio (1.4.4)}
 \begin{description}
 \item[Descrizione:] fase in cui si procede con la definizionedelle unità realizzative cioè moduli la cui complessità deve essere ridotta al minimo indispensabile al fine di permettere la realizzazione del modulo al singolo programmatore.
 \item[Responsabile:] 
@@ -305,7 +309,7 @@ alto livello del software.
 \item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
 
-\paragraph{Realizzazione documentazione database}
+\paragraph{Realizzazione documentazione database (1.4.5)}
 \begin{description}
 \item[Descrizione:] stesura formale della documentazione relativa all'architettura riguardante il database.
 \item[Responsabile:] 
@@ -323,7 +327,7 @@ alto livello del software.
 \item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
 
-\paragraph{Definizione e realizzazione del database}
+\paragraph{Realizzazione database (1.5.1)}
 \begin{description}
 \item[Descrizione:] fase di sviluppo e codifica del database secondo quanto definito nella fase di progettazione.
 \item[Responsabile:] 
@@ -341,7 +345,7 @@ alto livello del software.
 \item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
 
-\paragraph{Realizzazione componenti}
+\paragraph{Realizzazione componenti (1.5.2)}
 \begin{description}
 \item[Descrizione:] fase di sviluppo e codifica delle componenti previste nella fase di progettazione comprensive sia dell'interfaccia grafica del prodotto, sia delle logica dell'applicativo.
 \item[Responsabile:] 
@@ -359,25 +363,7 @@ alto livello del software.
 \item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
 
-\paragraph{Manuali Utente}
-\begin{description}
-\item[Descrizione:] realizzazione dei manuali utente per il supporto all'utente all'uso dell'interfaccia. Il manuale illustra le funzionalità del prodotto, il suo utilizzo e l'esposizione di problemi con le possibili soluzioni.
-\item[Responsabile:] 
-\item[Input:] interfaccia prodotto.
-\item[Output:] documento con lo scopo di fornire un supporto agli utenti dopo il rilascio.
-\item[Attività:]
-\begin{itemize}
-\item studio delle funzionalità del software;
-\item prima realizzazione manuale;
-\item verifica documento ed eventuali correzioni;
-\item formalizzazione documento;
-\item approvazione;
-\end{itemize}
-\item[Costo:] \euro{}
-\item[Tempi di realizzazione:]  giorni lavorativi.
-\end{description}
-
-\paragraph{Test di unità}
+\paragraph{Test di unità (1.6.1)}
 \begin{description}
 \item[Descrizione:] fase di test di tutte le singole unità software prodotte.
 \item[Responsabile:] 
@@ -398,7 +384,7 @@ alto livello del software.
 \item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
 
-\paragraph{Test di integrazione}
+\paragraph{Test di integrazione (1.6.2)}
 \begin{description}
 \item[Descrizione:] fase di test delle singole funzionalità del prodotto, si tratta di una verifica in primis dei flussi di dati in entrata e in uscita tra le varie componenti realizzate e infine nella verifica dei flusso di controllo tra le componenti.
 \item[Responsabile:] 
@@ -419,7 +405,7 @@ alto livello del software.
 \item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
 
-\paragraph{Test di sistema}
+\paragraph{Test di sistema (1.6.3)}  
 \begin{description}
 \item[Descrizione:] fase di test sulle interazioni fra le singole unità. Si verifica che i comportamenti in seguito alle comunicazioni fra di queste siano quelli previsti. Queste fase ha lo scopo principale di effettuare un collaudo interno al fine di compiere eventuali correzioni onde evitare malfunzionamenti per il collaudo finale del prodotto.
 \item[Responsabile:] 
@@ -440,7 +426,7 @@ alto livello del software.
 \item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
 
-\paragraph{Collaudo finale}
+\paragraph{Collaudo finale (1.6.4)}
 \begin{description}
 \item[Descrizione:] fase di test dell'intero sistema da effettuare prima del rilascio. Si cercano eventuali errori o malfunzionamenti e successivamente si certifica che tutte le funzionalità dichiarate siano presenti.
 \item[Responsabile:] 
@@ -462,7 +448,25 @@ alto livello del software.
 \item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
 
-\paragraph{Promozione del Prodotto}
+\paragraph{Manuali Utente (1.7.1)}
+\begin{description}
+\item[Descrizione:] realizzazione dei manuali utente per il supporto all'utente all'uso dell'interfaccia. Il manuale illustra le funzionalità del prodotto, il suo utilizzo e l'esposizione di problemi con le possibili soluzioni.
+\item[Responsabile:] 
+\item[Input:] interfaccia prodotto.
+\item[Output:] documento con lo scopo di fornire un supporto agli utenti dopo il rilascio.
+\item[Attività:]
+\begin{itemize}
+\item studio delle funzionalità del software;
+\item prima realizzazione manuale;
+\item verifica documento ed eventuali correzioni;
+\item formalizzazione documento;
+\item approvazione;
+\end{itemize}
+\item[Costo:] \euro{}
+\item[Tempi di realizzazione:]  giorni lavorativi.
+\end{description}
+
+\paragraph{Promozione del Prodotto (1.7.2)}
 \begin{description}
 \item[Descrizione:] fase di promozione del prodotto realizzato. Si punta a pubblicizzare il prodotto con lo scopo di raggiungere quanti più clienti possibili iniziando a creare un brand.
 \item[Responsabile:] 
@@ -477,7 +481,7 @@ alto livello del software.
 \item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
 
-\paragraph{Assistenza e manutenzione}
+\paragraph{Assistenza e manutenzione (1.7.3)}
 \begin{description}
 \item[Descrizione:] fase che segue il rilascio del software: in questa fase bisogna prevedere
 possibili bug del prodotto e problemi che si possono verificare con i clienti e che dovranno essere risolti.
