--- a/PianoDiProgetto/sections/wbs.tex
+++ b/PianoDiProgetto/sections/wbs.tex
@@ -35,7 +35,9 @@ Inoltre viene verificato che quanto è stato prodotto sia conforme agli obiettiv
 \paragraph{Pubblicazione (1.7)}
 Una volta che il software prodotto è terminato e rispetta gli obiettivi ed i requisiti, viene avviato il piano per il rilascio.\\
 In questa fase è prevista la realizzazione di documentazione a supporto dell'utente finale ed eventuali attività di manutenzione o comunque di supporto all'utente finale.\\
-Deve essere anche definito come la società intende promuovere il proprio prodotto e la ricerca di eventuali partnership.
+
+\paragraph{Commercializzazione (1.8)}
+Questa fase è stata pianificata al fine di definire come la società intende promuovere il proprio prodotto, ricercare eventuali partnership.
 
 \subsubsection {WBS-Secondo livello}
 Per la descrizione dei Work Package di secondo livello verrà utilizzato il seguente schema in quanto, fatta eccezione per il WP %TODO manca numero work package
@@ -466,22 +468,7 @@ alto livello del software.
 \item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
 
-\paragraph{Promozione del Prodotto (1.7.2)}
-\begin{description}
-\item[Descrizione:] fase di promozione del prodotto realizzato. Si punta a pubblicizzare il prodotto con lo scopo di raggiungere quanti più clienti possibili iniziando a creare un brand.
-\item[Responsabile:] 
-\item[Input:] alcune conoscenze di marketing e target clienti.
-\item[Output:] slogan, pubblicità scelte di mercato da intraprendere.
-\item[Attività:]
-\begin{itemize}
-\item ricerca possibili clienti;
-\item pubblicità rivolta alla categorie di clienti scelti;
-\end{itemize}
-\item[Costo:] \euro{}.
-\item[Tempi di realizzazione:]  giorni lavorativi.
-\end{description}
-
-\paragraph{Assistenza e manutenzione (1.7.3)}
+\paragraph{Assistenza e manutenzione (1.7.2)}
 \begin{description}
 \item[Descrizione:] fase che segue il rilascio del software: in questa fase bisogna prevedere
 possibili bug del prodotto e problemi che si possono verificare con i clienti e che dovranno essere risolti.
@@ -498,3 +485,32 @@ soddisfazione del prodotto tramite interviste e questionari per fornire assisten
 \item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
 
+\paragraph{Promozione del prodotto (1.8.1)}
+\begin{description}
+\item[Descrizione:] fase di promozione del prodotto realizzato. Si punta a pubblicizzare il prodotto con lo scopo di raggiungere quanti più clienti possibili iniziando a creare un brand.
+\item[Responsabile:] 
+\item[Input:] alcune conoscenze di marketing e target clienti.
+\item[Output:] slogan, pubblicità scelte di mercato da intraprendere.
+\item[Attività:]
+\begin{itemize}
+\item ricerca possibili clienti;
+\item pubblicità rivolta alla categorie di clienti scelti;
+\end{itemize}
+\item[Costo:] \euro{}.
+\item[Tempi di realizzazione:]  giorni lavorativi.
+\end{description}
+
+\paragraph{Presentazione del prodotto (1.8.2)}
+\begin{description}
+\item[Descrizione:] il prodotto software verrà presentato in opportuni incontri con dei potenziali clienti al fine di dimostrare l'utilità del prodotto.
+\item[Responsabile:] 
+\item[Input:] software completato.
+\item[Output:] incremento delle conoscenze del prodotto stesso e del team a possibili acquirenti e investitori. 
+\item[Attività:]
+\begin{itemize}
+\item dimostrazione dell'utilità del prodotto;
+\item raccolta feedback.
+\end{itemize}
+\item[Costo:] \euro{}.
+\item[Tempi di realizzazione:]  giorni lavorativi.
+\end{description}
